<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="shoe_store">Shoe Store</string>
    <string name="create_account">Create Account</string>
    <string name="welcome">Welcome</string>
    <string name="view_your_shoes">VIEW YOUR SHOES</string>
    <string name="get_started">get started</string>
    <string name="add_button">add_button</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="company">Company</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="save">save</string>
    <string name="add_new_entry">Add new entry</string>
    <string name="logout">logout</string>
    <string name="home">Home</string>
    <string name="instruction">Instruction</string>
    <string name="detail">Detail</string>
    <string name="add_new_shoe"><![CDATA[Add new shoe ->]]></string>
    <string name="view_shoes">View shoes</string>
    <string name="racer">Racer</string>
    <string name="nike">NIKE</string>
    <string name="_40">40</string>
    <string name="price">Price</string>
</resources>
